--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -1,57 +1,84 @@
-.dashboard {
-  display: flex;
-  min-width: 80vw;
-  padding: 0px 15px;
-  height: 100%;
-  background-color:var(--dashboard-bg-color);
-  box-shadow: -1px 2px 2px 1px var(--dashboard-box-shadow), 1px 2px 2px 0px var(--dashboard-box-shadow);
+.navbar {
+  width: 100%;
 }
 
-/* .dashboard-header {
-  
+.profile {
+  background-color: #e2e2e2;
+  height: 100%;
+  overflow-y: auto;
+  transition: all 0.4s ease-in;
+}
+
+/* .profile-box, .user-data-box {
+  height: 100%;
 } */
 
-.dashboard-header .search-form {
-  padding: 15px 10px;
+
+.found-user {
+  background-color: #032f62;
 }
 
-.dashboard-header .search-form .input {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-.dashboard-header .search-form .input input {
-  border-top: 0px;
-  border-left: 0px;
-  border-right: 0px;
-  border-bottom: 2px solid #6a6a6a;
-  outline: 0;
-  padding: 5px 0px 5px;
-  font-size: 20px;
-  position: relative;
-  display: block;
-}
-
-.dashboard-header .search-form .input input:hover,
-.dashboard-header .search-form .input input:focus {
-  border-bottom: 2px solid blue;
-}
-
-.dashboard-header .search-form .input::after {
-  content: ' ';
-  width: 0px;
-  position: absolute;
-  bottom: 0;
-  height: 2px;
+.user-data{
   background-color: white;
-  transition: all 0.3s ease-in;
+  height: 100%;
+  overflow-y: auto;
 }
 
-.dashboard-header .search-form .input:hover::after, 
-.dashboard-header .search-form .input:focus::after {
-  width: 100%;
-  background-color: blue;
-  transition: all 0.3s ease-out;
+.profile-box .card {
+  margin-top: 1.75rem;
 }
 
+.profile-box, .user-data-box {
+  opacity: 0;
+  transition: all 0.4s 0.4s ease-in;
+  
+}
+
+.reveal {
+  opacity: 1;
+}
+
+.user-data.bg-danger .user-data-box {
+  height: 100%;
+}
+
+.user-data-box .list-header {
+  margin: 1.75rem 0 1rem;
+}
+
+.user-data-box .card {
+  border-right: 0px;
+  border-left: 0px;
+  border-top: 0px;
+  border-radius: 0px;
+}
+
+.user-data-box .card.org-card {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+}
+
+.user-data-box .card .card-title {
+  margin-bottom: 0.25rem;
+  font-weight: 600;
+}
+
+.user-data-box .card .card-text {
+  font-size: 0.9rem;
+  margin-bottom: 0.9rem;
+}
+
+.user-data-box .card .other-details span {
+  font-size: 0.7rem;
+}
+
+.error-box h4 {
+  font-weight: 300;
+  color: white;
+}
+
+.error-box h1 {
+  font-size: 4em;
+  margin-bottom: 0em;
+  color: white;
+}
